[gd_scene load_steps=18 format=3 uid="uid://bgwcvvk1ql283"]

[ext_resource type="Script" uid="uid://cfahrhhsj62bf" path="res://shop.gd" id="1_k8keq"]
[ext_resource type="Texture2D" uid="uid://b7vmx8iewcrqw" path="res://assets/sprites/Shop-background.png" id="2_24vte"]
[ext_resource type="Texture2D" uid="uid://bqr5cm21n1y27" path="res://assets/sprites/shop/Item-Attack_up.png" id="3_8r1wq"]
[ext_resource type="Texture2D" uid="uid://dlh1wkfe0355h" path="res://assets/sprites/ShopKeeper.png" id="3_aarii"]
[ext_resource type="Texture2D" uid="uid://bormduoc0mku8" path="res://assets/sprites/shop/Item-Crystalx2.png" id="4_1v8qu"]
[ext_resource type="Theme" uid="uid://b36arowifsrqg" path="res://scenes/themes_and_stuff/menu_theme.tres" id="4_44xle"]
[ext_resource type="Texture2D" uid="uid://dl0of1jxgf85v" path="res://assets/sprites/shop/Desk.png" id="4_hmcdy"]
[ext_resource type="Texture2D" uid="uid://6x4olsqcgus5" path="res://assets/sprites/ShopKeeper-background.png" id="5_24vte"]
[ext_resource type="Texture2D" uid="uid://ftdcwcjo1qd7" path="res://assets/sprites/shop/Item-dash.png" id="5_44xle"]
[ext_resource type="Texture2D" uid="uid://dtbs86yphqyhq" path="res://assets/sprites/shop/Item-Defence_up.png" id="6_24it5"]
[ext_resource type="Texture2D" uid="uid://cu7pxh740hx3c" path="res://assets/sprites/shop/Item-Health_up.png" id="7_7mqwv"]
[ext_resource type="Texture2D" uid="uid://b3tp1is1eaxbl" path="res://assets/sprites/shop/Item-New_attack[fire blast].png" id="8_gobkm"]
[ext_resource type="Texture2D" uid="uid://ct2b15amwjiuy" path="res://assets/sprites/Coin-counter.png" id="13_24it5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ajxib"]
texture = ExtResource("2_24vte")
expand_margin_left = 54.0
expand_margin_top = 48.0
expand_margin_right = 62.0
expand_margin_bottom = 48.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y6sft"]
texture = ExtResource("5_24vte")

[sub_resource type="LabelSettings" id="LabelSettings_k8keq"]
line_spacing = 1.0
font_size = 50
shadow_size = 10
shadow_color = Color(0.670308, 0.158384, 0.859242, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mqwv"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[node name="Shop" type="Control"]
layout_mode = 3
anchor_left = 0.733
anchor_right = 0.996
anchor_bottom = 0.437
offset_left = -1415.36
offset_right = -0.320068
offset_bottom = 608.04
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8keq")

[node name="Items_Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -504.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ajxib")

[node name="GridContainer" type="GridContainer" parent="Items_Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.221045
anchor_top = 0.216667
anchor_right = 0.784605
anchor_bottom = 0.783333
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = -120
columns = 3
metadata/_edit_use_anchors_ = true

[node name="Attack_up" type="TextureButton" parent="Items_Background/GridContainer"]
editor_description = "This lets you boost your attack speed! (5000 crystals.)"
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_right = NodePath("../Crystals_x2")
focus_neighbor_bottom = NodePath("../Defense_up")
texture_normal = ExtResource("3_8r1wq")
stretch_mode = 0
metadata/value = 1

[node name="Label" type="Label" parent="Items_Background/GridContainer/Attack_up"]
layout_mode = 0
offset_left = 133.0
offset_top = 144.0
offset_right = 196.0
offset_bottom = 211.0
theme = ExtResource("4_44xle")
theme_override_font_sizes/font_size = 66
text = "111"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crystals_x2" type="TextureButton" parent="Items_Background/GridContainer"]
editor_description = "This boosts your cystals earned by 2! (5000 crystals)(Sorry, doesn't do anything.)"
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Attack_up")
focus_neighbor_right = NodePath("../Dash")
focus_neighbor_bottom = NodePath("../Health_up")
texture_normal = ExtResource("4_1v8qu")
stretch_mode = 0
metadata/value = 2

[node name="Label" type="Label" parent="Items_Background/GridContainer/Crystals_x2"]
layout_mode = 0
offset_left = 133.0
offset_top = 144.0
offset_right = 196.0
offset_bottom = 211.0
theme = ExtResource("4_44xle")
theme_override_font_sizes/font_size = 66
text = "111"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dash" type="TextureButton" parent="Items_Background/GridContainer"]
editor_description = "This lets you dash! (5000 crystals.)"
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Crystals_x2")
focus_neighbor_bottom = NodePath("../New_attack")
texture_normal = ExtResource("5_44xle")
stretch_mode = 0
metadata/value = 3

[node name="Label" type="Label" parent="Items_Background/GridContainer/Dash"]
layout_mode = 0
offset_left = 133.0
offset_top = 144.0
offset_right = 196.0
offset_bottom = 211.0
theme = ExtResource("4_44xle")
theme_override_font_sizes/font_size = 66
text = "111"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Defense_up" type="TextureButton" parent="Items_Background/GridContainer"]
editor_description = "This boosts your defense! (5000 crystals.)
(Sorry, doesn't do anything.)"
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../Back_button")
focus_neighbor_top = NodePath("../Attack_up")
focus_neighbor_right = NodePath("../Health_up")
focus_neighbor_bottom = NodePath("../../Back_button")
texture_normal = ExtResource("6_24it5")
stretch_mode = 0
metadata/value = 4

[node name="Label" type="Label" parent="Items_Background/GridContainer/Defense_up"]
layout_mode = 0
offset_left = 133.0
offset_top = 156.0
offset_right = 196.0
offset_bottom = 223.0
theme = ExtResource("4_44xle")
theme_override_font_sizes/font_size = 66
text = "111"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health_up" type="TextureButton" parent="Items_Background/GridContainer"]
editor_description = "This heals you! (5000 crystals)"
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Defense_up")
focus_neighbor_top = NodePath("../Crystals_x2")
focus_neighbor_right = NodePath("../New_attack")
texture_normal = ExtResource("7_7mqwv")
stretch_mode = 0
metadata/value = 5

[node name="Label" type="Label" parent="Items_Background/GridContainer/Health_up"]
layout_mode = 0
offset_left = 131.0
offset_top = 156.0
offset_right = 194.0
offset_bottom = 223.0
theme = ExtResource("4_44xle")
theme_override_font_sizes/font_size = 66
text = "111"
horizontal_alignment = 1
vertical_alignment = 1

[node name="New_attack" type="TextureButton" parent="Items_Background/GridContainer"]
editor_description = "This unlocks a new attack! (5000 crystals.)"
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Health_up")
focus_neighbor_top = NodePath("../Dash")
texture_normal = ExtResource("8_gobkm")
stretch_mode = 0
metadata/value = 6

[node name="Label" type="Label" parent="Items_Background/GridContainer/New_attack"]
layout_mode = 0
offset_left = 127.0
offset_top = 148.0
offset_right = 218.0
offset_bottom = 215.0
theme = ExtResource("4_44xle")
theme_override_font_sizes/font_size = 41
text = "‚ùé"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back_button" type="Button" parent="Items_Background"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 108.0
offset_top = -280.0
offset_right = 408.0
offset_bottom = -80.0
grow_vertical = 0
focus_neighbor_top = NodePath("../GridContainer/Defense_up")
focus_neighbor_right = NodePath("../GridContainer/Defense_up")
theme = ExtResource("4_44xle")
text = "BACK"

[node name="Shopkeeper_background" type="Panel" parent="."]
layout_mode = 0
offset_left = 1416.0
offset_right = 1928.0
offset_bottom = 880.0
theme_override_styles/panel = SubResource("StyleBoxTexture_y6sft")

[node name="Shopkeeper" type="TextureRect" parent="Shopkeeper_background"]
layout_mode = 0
anchor_left = -0.265625
anchor_top = 0.427273
anchor_right = 1.32422
anchor_bottom = 1.35227
offset_right = -714.0
offset_bottom = -714.0
scale = Vector2(8.14, 8.14)
texture = ExtResource("3_aarii")
metadata/_edit_use_anchors_ = true

[node name="shopkeeper_desk" type="TextureRect" parent="Shopkeeper_background"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.03125
anchor_top = 0.509091
anchor_right = 1.03125
anchor_bottom = 1.24773
texture = ExtResource("4_hmcdy")
metadata/_edit_use_anchors_ = true

[node name="Shopkeeper_speech" type="Label" parent="Shopkeeper_background"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.984375
anchor_bottom = 0.636364
text = "HI! im shop bot. please hover over the item you wish to buy, but be worned it will cost you."
label_settings = SubResource("LabelSettings_k8keq")
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_lock_ = true
metadata/_edit_use_anchors_ = true

[node name="Score" type="Control" parent="Shopkeeper_background"]
layout_mode = 1
anchor_left = 0.0625
anchor_right = 0.0833333
anchor_bottom = 0.037037
offset_left = -354.0
offset_top = 888.0
offset_right = -354.0
offset_bottom = 888.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Shopkeeper_background/Score"]
layout_mode = 1
anchors_preset = -1
anchor_left = 42.7502
anchor_top = 0.736364
anchor_right = 69.7503
anchor_bottom = 4.05
theme_override_styles/panel = SubResource("StyleBoxFlat_7mqwv")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Shopkeeper_background/Score/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 39.8449
anchor_top = 0.975995
anchor_right = 43.5899
anchor_bottom = 2.59438
offset_left = -11349.3
offset_top = -75.4075
offset_right = -11111.3
offset_bottom = -7.15462
scale = Vector2(0.535, 0.535)
theme = ExtResource("4_44xle")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "00000"
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Shopkeeper_background/Score/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 35.6147
anchor_top = -4.0091
anchor_right = 37.2554
anchor_bottom = 0.439986
offset_left = -10431.0
offset_top = 240.982
offset_right = -10803.5
offset_bottom = -131.519
scale = Vector2(4.725, 4.725)
texture = ExtResource("13_24it5")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Items_Background/Back_button" to="." method="_on_back_button_pressed"]
